Implemented and Documented Category Manipulation APIs
